# rust_cmdwrap

./: .gitignore  Cargo.toml  README.txt  cmdwrap.json  deny.toml  trigger_release.sh  yosys
.github/workflows/: release-packaging.yaml
config/: cmdwrap.json
prototype/: hdl-container-wrapper  nextpnr-ice40  yosys
src/: main.rs
