[package]
name = "cmdwrap"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "6.0.0"
leon = "3.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
